--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="ru">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Amanzholov University — Расписание</title>
   <link rel="stylesheet" href="style.css">
   <script defer src="main.js"></script>
@@ -26,10 +26,10 @@
   <main class="container">
     <section class="panel">
       <h2>Кафедры</h2>
-      <div id="departments" class="grid"></div>
+      <div id="departments" class="departments-grid"></div>
     </section>
 
-    <section class="panel">
+    <section class="panel" id="teachers-section" style="display: none;">
       <h2 id="teachers-title">Преподаватели</h2>
       <div id="teachers" class="grid"></div>
     </section>
