--- a/index.html
+++ b/index.html
@@ -1,23 +1,16 @@
-<!doctype html>
-<html lang="ru">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Amanzholov University — Расписание</title>
-  <link rel="stylesheet" href="style.css">
-  <script defer src="main.js"></script>
-</head>
-<body>
-  <header class="site-header">
-    <div class="container">
-      <div class="brand">
-        <div class="logo-placeholder">AU</div>
-        <div>
-          <h1>Amanzholov University</h1>
-          <p class="subtitle">Расписание преподавателей</p>
-        </div>
+<header class="site-header">
+  <div class="container">
+    <div class="brand">
+      <!-- ЛОГОТИП — вместо AU -->
+      <img src="logo_vkgu_amanzholov.png" alt="Логотип Amanzholov University" class="logo">
+      <div>
+        <h1>Amanzholov University</h1>
+        <p class="subtitle">Расписание преподавателей</p>
       </div>
-      <nav>
+    </div>
+    <nav>
+      <!-- Здесь будет навигация -->
+    </nav>
         <a href="admin.html" class="btn">Админ</a>
       </nav>
     </div>
