--- a/index.html
+++ b/index.html
@@ -8,24 +8,22 @@
   <script defer src="main.js"></script>
 </head>
 <body>
-  <header class="site-header">
-    <div class="container">
-      <div class="brand">
-        <!-- Логотип вместо AU -->
-        <div class="logo-placeholder">
-          <img src="logo_vkgu_amanzholov.png" alt="Логотип Amanzholov University" class="logo-img">
-        </div>
-        <div>
-          <h1>Amanzholov University</h1>
-          <p class="subtitle">Расписание преподавателей</p>
-        </div>
+<header class="site-header">
+  <div class="container">
+    <div class="brand">
+      <div class="logo-placeholder">
+        <img src="logo_vkgu_amanzholov.png" alt="Логотип" class="logo-img">
       </div>
-      <nav>
-        <a href="admin.html" class="btn">Админ</a>
-      </nav>
+      <div>
+        <h1>Amanzholov University</h1>
+        <p class="subtitle">Расписание преподавателей</p>
+      </div>
     </div>
-  </header>
-
+    <nav>
+      <a href="admin.html" class="btn">Админ</a>
+    </nav>
+  </div>
+</header>
   <main class="container">
     <section class="panel">
       <h2>Кафедры</h2>
