--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Amanzholov University — Расписание</title>
-  <link rel="icon" type="image/png" href="icon.png">
+  <link rel="icon" type="image/png" href="icon.png" sizes="32x32">
   <link rel="stylesheet" href="style.css">
   <script defer src="main.js"></script>
 </head>
