--- a/admin.html
+++ b/admin.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Админ — Amanzholov University</title>
+  <link rel="icon" type="image/png" href="icon.png" sizes="32x32">
   <link rel="stylesheet" href="style.css">
   <script defer src="admin.js"></script>
 </head>
@@ -11,7 +12,8 @@
   <header class="site-header">
     <div class="container">
       <div class="brand">
-        <div class="logo-placeholder">AU</div>
+        <div class="logo-placeholder">
+          <img src="logo_vkgu_amanzholov.png" alt="Логотип" class="logo-img">
         <div>
           <h1>Админ-панель</h1>
           <p class="subtitle">Amanzholov University — управление расписанием</p>
