--- a/teacher.html
+++ b/teacher.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Расписание преподавателя — Amanzholov University</title>
+  <link rel="icon" type="image/png" href="icon.png">
   <link rel="stylesheet" href="style.css">
   <script defer src="main.js"></script>
 </head>
